--- a/certificates.html
+++ b/certificates.html
@@ -85,9 +85,9 @@
 
         <div class="certificate">
           <a href="nabt.png" target="_blank">
-            <img src="nabt.png" alt="Network Addressing amd Basic Troubleshooting Certificate">
+            <img src="nabt.png" alt="Network Addressing and Basic Troubleshooting Certificate">
           </a>
-          <p>Network Addressing amd Basic Troubleshooting – Cisco Networking Academy (2025)</p>
+          <p>Network Addressing and Basic Troubleshooting – Cisco Networking Academy (2025)</p>
         </div>
 
         <div class="certificate">
@@ -117,7 +117,7 @@
 
 
   <footer>
-    <p>&copy; 2025 Paul Labaguis. All Rights Reserved.</p>
+    <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
