--- a/reflection.html
+++ b/reflection.html
@@ -24,7 +24,8 @@
 
   <main>
     <section>
-      <p>Throughout my academic and personal journey, I’ve learned that success is built on persistence and curiosity. Each project strengthened my skills and helped me grow both technically and personally.</p>
+      <p>Throughout my BSIT journey, I’ve gained not only technical skills but also essential soft skills like teamwork, critical thinking, and flexibility. Developing this e-portfolio strengthened my knowledge of layout, organization, and the value of lifelong learning in the field of technology.
+This experience showed me that success in IT goes beyond knowing the tools—it requires innovation, curiosity, and determination. I look forward to continually improving and becoming a professional who can help create purposeful and user-centered digital solutions.</p>
     </section>
   </main>
 
