--- a/reflection.html
+++ b/reflection.html
@@ -30,7 +30,7 @@ This experience showed me that success in IT goes beyond knowing the tools—it 
   </main>
 
   <footer>
-    <p>&copy; 2025 [Your Name]</p>
+    <p>&copy; 2025 Labaguis. All Rights Reserved</p>
   </footer>
 </body>
 </html>
