--- a/education.html
+++ b/education.html
@@ -22,38 +22,56 @@
     </nav>
   </header>
 
-  <main>
-    <section>
-      <ul class="education-list">
-        <li class="education-item">
-          <img src="cdm.jpg" alt="Colegio De Montalban">
-          <p><a href="https://www.facebook.com/official.colegiodemontalban" target="_blank">Colegio De Montalban</a></p>
-          <p><strong>Bachelor of Science in Information Technology</strong> (2024 – Present)</p>
-        </li>
+  <section class="content">
+    <h2>Educational Background</h2>
 
-        <li class="education-item">
-          <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School">
-          <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive Senior High School</a></p>
-          <p><strong>Senior High School</strong> (2023–2024)</p>
-        </li>
+    <div class="card">
+      <a href="https://www.facebook.com/official.colegiodemontalban" target="_blank" rel="noopener noreferrer">
+        <img src="cdm.jpg" alt="Colegio De Montalban Logo" class="school-logo">
+      </a>
+      <div class="school-info">
+        <h3>College / University</h3>
+        <p><strong>Colegio De Montalban</strong> – Rodriguez, Rizal (2024 – Present)</p>
+        <p>Program: Bachelor of Science in Information Technology</p>
+      </div>
+    </div>
 
-        <li class="education-item">
-          <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School">
-          <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive High School</a></p>
-          <p><strong>High School</strong> (2021–2022)</p>
-        </li>
+    <div class="card">
+      <a href="https://www.facebook.com/mnchs1997" target="_blank" rel="noopener noreferrer">
+        <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School Logo" class="school-logo">
+      </a>
+      <div class="school-info">
+        <h3>Senior High School</h3>
+        <p><strong>Mogpog National Comprehensive High School SHS</strong> – Mogpog,Marinduque (2023 – 2024)</p>
+        <p>Academic Track: ICT –General Academic Strand</p>
+      </div>
+    </div>
 
-        <li class="education-item">
-          <img src="bintakay.jpeg" alt="Bintakay Elementary School">
-          <p><a href="https://www.facebook.com/bintakayes" target="_blank">Bintakay Elementary School</a></p>
-          <p><strong>Elementary School</strong> (2017–2018)</p>
-        </li>
-      </ul>
-    </section>
-  </main>
+    <div class="card">
+      <a href="https://www.facebook.com/mnchs1997" target="_blank" rel="noopener noreferrer">
+        <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School Logo" class="school-logo">
+      </a>
+      <div class="school-info">
+        <h3>High School</h3>
+        <p><strong>Mogpog National Comprehensive High School</strong> – Mogpog,Marinduque (2021 – 2022)</p>
+      </div>
+    </div>
 
+    <div class="card">
+      <a href="https://www.facebook.com/bintakayes" target="_blank" rel="noopener noreferrer">
+        <img src="bintakay.jpeg" alt="Bintakay Elementary School Logo" class="school-logo">
+      </a>
+      <div class="school-info">
+        <h3>Elementary School</h3>
+        <p><strong>Bintakay Elementary School</strong> – Mogpog,Marinduque (2017 – 2018)</p>
+      </div>
+    </div>
+  </section>
+      
   <footer>
-    <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
+    <p>© 2025 Labaguis. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
+
