--- a/education.html
+++ b/education.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Education | E-Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Educational Background</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body>
+
   <header>
-    <h1>Educational Background</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">About Me</a></li>
+    <nav class="navbar">
+      <h1 class="logo">Labaguis-E-portfolio</h1>
+  
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
         <li><a href="education.html" class="active">Education</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="skills.html">Skills</a></li>
