--- a/skills.html
+++ b/skills.html
@@ -24,14 +24,23 @@
 
   <main>
     <section class="skills">
-      <span>HTML</span>
-      <span>CSS</span>
-      <span>JavaScript</span>
-    </section>
+     <h2>Technical Skills</h2>
+      <div class="skills-grid">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+        <span>Python</span>
+        <span>Responsive Web Design</span>
+        <span>GitHub</span>
+        <span>Install & Configure Computer Systems</span>
+        <span>Setup Computer Networks</span>
+        <span>Setup Computer Servers</span>
+      </div> 
+      
   </main>
 
   <footer>
-    <p>&copy; 2025 Paul Labaguis. All Rights Reserved.</p>
+    <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
