--- a/education.html
+++ b/education.html
@@ -27,33 +27,33 @@
       <ul class="education-list">
         <li class="education-item">
           <img src="cdm.jpg" alt="Colegio De Montalban">
-          <p><a href="https://www.facebook.com/official.colegiodemontalbann" target="_blank">Colegio De Montalban</a></p>
-          <p><strong>Bachelor of Science in Information Technology</strong> (2024 – Present)</p>
+          <p><a href="https://www.facebook.com/official.colegiodemontalban" target="_blank">Colegio De Montalban</a></p>
+          <p><strong>Bachelor of Science in Information Technology</strong> Rodriguez,Rizal (2024 – Present)</p>
+        </li>
+
+        <li class="education-item">
+          <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School">
+          <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive High School SHS</a></p>
+          <p><strong>Senior High School ICT General Academic Strand</strong> Mogpog,Marinduque (2023–2024)</p>
         </li>
 
         <li class="education-item">
           <img src="mnchs.jpg" alt="Mogpog National Comprehensive Senior High School">
           <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive Senior High School</a></p>
-          <p><strong>Senior High School</strong> (2023–2024)</p>
-        </li>
-
-        <li class="education-item">
-          <img src="mnchs.jpg" alt="Mogpog National Comprehensive Senior High School">
-          <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive Senior High School</a></p>
-          <p><strong>High School</strong> (2021–2022)</p>
+          <p><strong>High School</strong> Mogpog,Marinduque (2021–2022)</p>
         </li>
 
         <li class="education-item">
           <img src="bintakay.jpeg" alt="Bintakay Elementary School">
           <p><a href="https://www.facebook.com/bintakayes" target="_blank">Bintakay Elementary School</a></p>
-          <p><strong>Elementary School</strong> (2017–2018)</p>
+          <p><strong>Elementary School</strong> Mogpog,Marinduque (2017–2018)</p>
         </li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Paul Labaguis. All Rights Reserved.</p>
+    <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
