--- a/education.html
+++ b/education.html
@@ -34,19 +34,19 @@
         <li class="education-item">
           <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School">
           <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive Senior High School</a></p>
-          <p><strong>General Academic Strand</strong> Mogpog Marinduque (2023-2024)</p>
+          <p><strong>General Academic Strand (2023-2024)</strong> Mogpog Marinduque</p>
         </li>
 
         <li class="education-item">
           <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School">
           <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive High School</a></p>
-          <p><strong> Mogpog Marinduque ( 2021 - 2022)</p>
+          <p>Mogpog Marinduque ( 2021 - 2022)</p>
         </li>
 
         <li class="education-item">
           <img src="bintakay.jpeg" alt="Bintakay Elementary School">
           <p><a href="https://www.facebook.com/bintakayes" target="_blank">Bintakay Elementary School</a></p>
-          <p><strong> Mogpog Marinduque (2017 - 2018)</p>
+          <p>Mogpog Marinduque (2017 - 2018)</p>
         </li>
       </ul>
     </section>
