--- a/education.html
+++ b/education.html
@@ -34,7 +34,8 @@
         <li class="education-item">
           <img src="mnchs.jpg" alt="Mogpog National Comprehensive High School">
           <p><a href="https://www.facebook.com/mnchs1997" target="_blank">Mogpog National Comprehensive Senior High School</a></p>
-          <p><strong>General Academic Strand</strong> Mogpog Marinduque (2023 - 2024)</p>
+          <p><strong>General Academic Strand</strong>
+          </p>Mogpog Marinduque (2023 - 2024)</p>
         </li>
 
         <li class="education-item">
