--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
       <div class="project">
         <h3>Simple Log In System</h3>
         <p>A simple Log in system using PHP, HTML, CSS, and JAVASCRIPT.</p>
-        <a href="https://rapstarngpinas.github.io/PHP-SIMPLE-LOG-IN-SYSTEM-/" target="_blank" class="project-link">
+        <a href=https://rapstarngpinas.github.io/SIMPLE-LOG-IN-SYSTEM-/" target="_blank" class="project-link">
           View on GitHub
         </a>
       </div>
