--- a/projects.html
+++ b/projects.html
@@ -89,16 +89,16 @@
       </div>
 
       <div class="project">
-        <h3>Simple Log In System</h3>
-        <p>A simple Log in system using PHP, HTML, CSS, and JAVASCRIPT.</p>
-        <a href=https://rapstarngpinas.github.io/SIMPLE-LOG-IN-SYSTEM-/" target="_blank" class="project-link">
+        <h3>Simple Log in System</h3>
+        <p>A simple Log in System using PHP, HTML, CSS, and JavaScript.</p>
+        <a href="https://rapstarngpinas.github.io/SIMPLE-LOG-IN-SYSTEM-/" target="_blank" class="project-link">
           View on GitHub
         </a>
       </div>
 
       <div class="project">
         <h3>Simple Calculator</h3>
-        <p>A simple calculator using PHP, HTML, CSS and JAVASCRIPT.</p>
+        <p>A simple Calculator using PHP, HTML, CSS and JAVASCRIPT.</p>
         <a href="https://rapstarngpinas.github.io/-SIMPLE-CALCULATOR-/" target="_blank" class="project-link">
           View on GitHub
         </a>
