--- a/skills.html
+++ b/skills.html
@@ -36,7 +36,25 @@
         <span>Setup Computer Networks</span>
         <span>Setup Computer Servers</span>
       </div> 
-      
+
+      <section class="skills-section">
+      <h2>Soft Skills</h2>
+      <div class="skills-grid">
+        <span>Teamwork</span>
+        <span>Time Management</span>
+        <span>Leadership</span>
+        <span>Adaptability</span>
+        <span>Problem Solving</span>
+      </div>
+      </section>
+
+      <section class="skills-section">
+      <h2>Languages</h2>
+      <div class="skills-grid">
+        <span>Filipino</span>
+        <span>English</span>
+      </div>
+      </section>
   </main>
 
   <footer>
