--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>John Paul M. Labaguis | E-Portfolio</title>
-  
-  <link rel="stylesheet" href="style.css" />
-  
-  <link rel="icon" type="image/png" href="favicon.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me | E-Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
   <header>
-    <nav class="navbar">
-      <h1 class="logo">LABAGUIS_E-PORTFOLIO</h1>
-
-      <ul class="nav-links" id="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+    <h1>Labaguis E-Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">About Me</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="skills.html">Skills</a></li>
@@ -28,34 +22,21 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Hello, I'm <span>John Paul M. Labaguis</span></h2>
-      <p>Aspiring Web Developer & Designer</p>
-      <button id="theme-toggle" aria-label="Toggle dark mode">🌙 Dark Mode</button>
-    </div>
-  </section>
-
-  <section class="about">
-    <h2>About Me</h2>
-
-    <div class="profile-photo">
-      <img src=paul.jpg" alt="Photo of John Paul M. Labaguis" loading="lazy">
-    </div>
-
-    <p>
+  <main>
+    <section>
+      <h2>About Me</h2>
       Hello! I’m <strong>John Paul M. Labaguis</strong>, a college student from 
       <em>Colegio de Montalban</em> taking up Bachelor of Science in Information Technology.
-      I’m passionate about computers and technology and also passionate musician, rap artist, and songwriter.
-    </p>
-    <p>
-      <strong>Career Goal:</strong> Software Engineer/ Cybersecurity Specialist / Web Designer
-    </p>
-  </section>
+      I’m passionate about computers and technology. and also passionate musician rap artist and song writer.
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 Labaguis. All Rights Reserved.</p>
+    <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
+
+
+
 
