--- a/projects.html
+++ b/projects.html
@@ -120,6 +120,14 @@
         </a>
       </div>
 
+      <div class="project">
+        </h3>Simple Memory Game</h3>
+        <p>A simple Memory Game using PHP, HTML, CSS, and JavaScript.</p>
+        <a href="https://rapstarngpinas.github.io/SIMPLE-MEMORY-GAME/" target="_blank" class="project-link">
+          View on GitHub
+        </a>
+      </div>
+
     </div>
   </main>
 
