--- a/certificates.html
+++ b/certificates.html
@@ -91,6 +91,13 @@
         </div>
 
         <div class="certificate">
+          <a href="nb.png" target="_blank">
+            <img src="nb.png" alt="Networking Basics Certificate">
+          </a>
+          <p>Networking Basics – Cisco Networking Academy (2025)</p>
+        </div>
+
+        <div class="certificate">
           <a href="ucmd.png" target="_blank">
             <img src="ucmd.png" alt="Using Computer and Mobile Devices Certificate">
           </a>
