--- a/projects.html
+++ b/projects.html
@@ -128,6 +128,14 @@
         </a>
       </div>
 
+      <div class="project">
+        <h3>Simple Bingo Game</h3>
+        <p>A simple Bingo Game using PHP, HTML, CSS, and JavaScript.</p>
+        <a href="https://rapstarngpinas.github.io/SIMPLE-BINGO-GAME/" target="_blank" class="project-link">
+          View on GitHub
+        </a>
+      </div>
+
     </div>
   </main>
 
