--- a/certificates.html
+++ b/certificates.html
@@ -117,6 +117,13 @@
           </a>
           <p>Hour of Code Computer Science – Code.org (2025)</p>
         </div>
+
+        <div class="certificate">
+          <a href="hoc.jpeg" target="_blank">
+            <img src="hoc.jpeg" alt="Certificate Of Participation Awareness-Raising Campaign on Al through Hour of Code">
+          </a>
+          <p>Google.org (2025)</p>
+        </div>
         
       </div>
     </section>
