--- a/certificates.html
+++ b/certificates.html
@@ -120,9 +120,9 @@
 
         <div class="certificate">
           <a href="hoc.jpeg" target="_blank">
-            <img src="hoc.jpeg" alt="Certificate Of Participation Awareness-Raising Campaign on Al through Hour of Code">
+            <img src="hoc.jpeg" alt="Certificate Of Participation">
           </a>
-          <p>Google.org (2025)</p>
+          <p> Certificate Of Participation Google.org (2025)</p>
         </div>
         
       </div>
