--- a/certificates.html
+++ b/certificates.html
@@ -122,7 +122,7 @@
           <a href="hoc.jpeg" target="_blank">
             <img src="hoc.jpeg" alt="Certificate Of Participation">
           </a>
-          <p> Certificate Of Participation Google.org (2025)</p>
+          <p> Certificate of Participation Google.org (2025)</p>
         </div>
         
       </div>
