--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
   </main>
   <main>
     <h2>References</h2>
-    <p> </a></p>
+    <p> </a>- BSIT INSTRUCTOR COLEGIO DE MONTALBAN</p>
     <p> </a></p>
     <p> </a></p>
   </main>
