--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact / References | John Paul Labaguis</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact | E-Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
-    <nav class="navbar">
-      <h1 class="logo">Labaguis_E-Portfolio</h1>
-      <ul class="nav-links" id="nav-links">
-        <li><a href="index.html">Home</a></li>
+    <h1>References / Contact</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">About Me</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="skills.html">Skills</a></li>
@@ -22,40 +21,25 @@
       </ul>
     </nav>
   </header>
-
-  <section class="content contact">
+    
+  <main>
     <h2>Contact</h2>
+    <p>Email: <a href="mailto:paullabaguis@gmail.com">paullabaguis76@gmail.com</a></p>
+    <p>Facebok: <a href="https://facebook.com/iamrapstar" target="_blank">Facebook.com/Paul Labaguis</a></p>
+    <p>GitHub: <a href="https://github.com/rapstarngpinas" target="_blank">github.com/rapstarngpinas</a></p>
+  </main>
+  <main>
+    <h2>References</h2>
+    <p> </a></p>
+    <p> </a></p>
+    <p> </a></p>
+  </main>
 
-    <div class="contact-container">
-      <div class="contact-item">
-        <strong>Email:</strong>
-        <a href="mailto:paullabaguis76.com">paullabaguis76@gmail.com</a>
-      </div>
-
-      <div class="contact-item">
-        <strong>Facebook:</strong>
-        <a href="https://www.facebook.com/iamrapstar" target="_blank">
-          facebook.com/Paul Labaguis 
-        </a>
-      </div>
-
-      <div class="contact-item">
-        <strong>GitHub:</strong>
-        <a href="https://github.com/rapstarngpinas" target="_blank">
-          github.com/rapstarngpinas
-        </a>
-      </div>
-    </div>
-
-    <h3>References</h3>
-    <ul class="references">
-      <li><strong> </strong> – IT Instructor, Colegio de Montalban</li>
-      <li><strong> </strong> – </li>
-    </ul>
-  </section>
 
   <footer>
-    <p>© 2025 Labaguis. All Rights Reserved.</p>
+    <p>&copy; 2025 Paul Labaguis. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
+
+
