Enhance About Me section with profile image
Added a profile image and updated the About Me section.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me | E-Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
   <header>
     <h1>Labaguis E-Portfolio</h1>
     <nav>
@@ -23,24 +26,26 @@
   </header>
 
   <main>
-    <section>
-      <h2>About Me</h2>
-      <p>Hello! I’m <strong>John Paul M. Labaguis</strong>, a college student from <em>Colegio de Montalban</em> taking up a Bachelor of Science in Information Technology. I'm passionate about computers, technology, and also a musician a rap artist and songwriter.</p>
+    <section class="about-section">
 
-      <h3>paul.jpg</h3>
-      <ul>
-        <li><strong>Works:</strong>https://www.facebook.com/CdMCSSOfficers</li>
-        <li><strong>Education:</strong> Colegio de Montalban — Bachelor of Science in Information Technology</li>
-        <li><strong>Lives In:</strong> Rodriguez, Rizal </li>
-        <li><strong>Birth Date:</strong> April 24, 2005</li>
-        <li><strong>Birth Place:</strong> Novaliches, Quezon City</li>
-        <li><strong>Relationship:</strong> Single</li>
-      </ul>
+      <!-- Profile Image -->
+      <div class="profile-container">
+        <img src="paul.jpg" alt="Profile Picture" class="profile-img">
+      </div>
+
+      <h2>About Me</h2>
+      <p>
+        Hello! I’m <strong>John Paul M. Labaguis</strong>, a college student from
+        <em>Colegio de Montalban</em> currently taking up a Bachelor of Science in Information Technology.
+        I’m passionate about computers, technology, and I am also a dedicated musician, rap artist, and songwriter.
+      </p>
+
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
