--- a/index.html
+++ b/index.html
@@ -22,20 +22,34 @@
     </nav>
   </header>
 
-  <main>
-    <section>
-      <h2>About Me</h2>
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Hello, I'm <span>John Paul M. Labaguis</span></h2>
+      <p>Aspiring Web Developer & Designer</p>
+      <button id="theme-toggle" aria-label="Toggle dark mode">🌙 Dark Mode</button>
+    </div>
+  </section>
+
+  <section class="about">
+    <h2>About Me</h2>
+
+    <div class="profile-photo">
+      <img src="paul.jpg" alt="Photo of John Paul M. Labaguis" loading="lazy">
+    </div>
+
+    <p>
       Hello! I’m <strong>John Paul M. Labaguis</strong>, a college student from 
       <em>Colegio de Montalban</em> taking up Bachelor of Science in Information Technology.
-      I’m passionate about computers and technology. and also passionate musician rap artist and song writer.
-    </section>
-  </main>
+      I’m passionate about computers and technology and also passionate musician rap artist and songwriter.
+    </p>
+    <p>
+      <strong>Career Goal:</strong> IT Network Engineer / Cybersecurity Specialist 
+    </p>
+  </section>
 
   <footer>
-    <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
+    <p>© 2025 Labaguis all Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
-
-
-
