--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <title>About Me | E-Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
   <header>
     <h1>Labaguis E-Portfolio</h1>
     <nav>
@@ -24,35 +22,20 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Hello, I'm <span>John Paul M. Labaguis</span></h2>
-      <p>Aspiring Web Developer & Designer</p>
-      <button id="theme-toggle" aria-label="Toggle dark mode">🌙 Dark Mode</button>
-    </div>
-  </section>
-
-  <section class="about">
-    <h2>About Me</h2>
-
-    <div class="profile-photo">
-      <img src="paul.jpg" alt="Photo of John Paul M. Labaguis" loading="lazy">
-    </div>
-
-    <p>
-      Hello! I’m <strong>John Paul M. Labaguis</strong>, a college student from
+  <main>
+    <section>
+      <h2>About Me</h2>
+      Hello! I’m <strong>John Paul M. Labaguis</strong>, a college student from 
       <em>Colegio de Montalban</em> taking up Bachelor of Science in Information Technology.
-      I'm passionate about computers, technology, and also a musician, rap artist, and songwriter.
-    </p>
-
-    <p>
-      <strong>Career Goal:</strong> IT Network Engineer / Cybersecurity Specialist
-    </p>
-  </section>
+      I’m passionate about computers and technology. and also passionate musician rap artist and song writer.
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 Labaguis. All Rights Reserved.</p>
+    <p>&copy; 2025 Labaguis. All Rights Reserved.</p>
   </footer>
-
 </body>
 </html>
+
+
+
