--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     .profile-container { text-align: center; margin-bottom: 20px; }
     .profile-container img { width: 180px; height: 180px; border-radius: 50%; object-fit: cover; border: 3px solid #0056b3; }
     .upload-btn { margin-top: 10px; }
-    footer { text-align: center; padding: 15px; background: #0056b3; color: #fff; margin-top: 20px; }
+    footer { text-align: center; padding: 15px; background: #262728; color: #fff; margin-top: 20px; }
   </style>
 </head>
 <body>
