--- a/reflection.html
+++ b/reflection.html
@@ -24,8 +24,13 @@
 
   <main>
     <section>
-      <p>Throughout my BSIT journey, I’ve gained not only technical skills but also essential soft skills like teamwork, critical thinking, and flexibility. Developing this e-portfolio strengthened my knowledge of layout, organization, and the value of lifelong learning in the field of technology.
-This experience showed me that success in IT goes beyond knowing the tools—it requires innovation, curiosity, and determination. I look forward to continually improving and becoming a professional who can help create purposeful and user-centered digital solutions.</p>
+      <p>My journey as a 2nd-year BSIT student has been both challenging and rewarding. This year, I have gained a deeper understanding of information technology concepts and practical skills that are essential for my future career. From learning advanced programming languages and database management to understanding network systems and cybersecurity principles, I realized how vast and dynamic the IT field truly is.
+
+I have also learned the importance of problem-solving and critical thinking. Many of our projects and assignments pushed me to think logically, troubleshoot errors, and find efficient solutions. Working on group activities and collaborations improved my communication and teamwork skills, showing me the value of cooperation in achieving common goals.
+
+Moreover, I have grown more disciplined and responsible. Managing multiple subjects, deadlines, and practical tasks taught me time management and perseverance. I’ve learned that continuous learning is vital in IT, as technology constantly evolves, and staying updated is necessary to remain relevant in the field.
+
+Overall, my 2nd-year BSIT journey has strengthened both my technical and personal growth. I am more confident in my abilities and excited to continue developing my skills in the coming years, knowing that every challenge is an opportunity to learn and improve.</p>
     </section>
   </main>
 
