--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
     }
 
     .skills-grid span {
-      background: #085AB0;
+      background: #FFFFFF;
       padding: 10px 20px;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
