--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,10 @@
     <p>Facebok: <a href="https://facebook.com/iamrapstar" target="_blank">Facebook.com/Paul Labaguis</a></p>
     <p>GitHub: <a href="https://github.com/rapstarngpinas" target="_blank">github.com/rapstarngpinas</a></p>
   </main>
+ 
   <main>
     <h2>References</h2>
-    <p> </a></p>
+    <p>IT Instructor - Colegio de Montalban<p/>
     <p> </a></p>
     <p> </a></p>
   </main>
