Add new certificates for Cisco Networking Academy

--- a/certificates.html
+++ b/certificates.html
@@ -105,6 +105,20 @@
         </div>
 
         <div class="certificate">
+          <a href="GSCPT.png" target="_blank">
+            <img src="GSCPT.png" alt="Getting Started with Cisco Packet Tracer Certificate">
+          </a>
+          <p>Getting Started with Cisco Packet Tracer – Cisco Networking Academy (2025)</p>
+        </div>
+
+        <div class="certificate">
+          <a href="NSS.png" target="_blank">
+            <img src="NSS.png" alt="Network Support and Security Certificate">
+          </a>
+          <p>Network Support and Security – Cisco Networking Academy (2025)</p>
+        </div>
+
+        <div class="certificate">
           <a href="ucmd.png" target="_blank">
             <img src="ucmd.png" alt="Using Computer and Mobile Devices Certificate">
           </a>
