Modify career goal in index.html
Updated career goal to include multiple roles.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       I’m passionate about computers and technology. I am also a passionate musician and songwriter.</p>
     </section>
 
-    <p style="text-align:center;">Career Goal <strong>Network Engineer</strong></p>
+    <p style="text-align:center;">Career Goal <strong>IT Network Engineer/ Cybersecurity Specialist / Web Designer</strong></p>
     </section>
 
     <p style="text-align:center;">Lives in <strong>Rodriguez Rizal</strong></p>
@@ -84,6 +84,7 @@
   </script>
 </body>
 </html>
+
 
 
 
